# habr-scraper

./: Makefile  README.md  pyproject.toml
app/: main.py  session.py  validators.py  workers.py
tests/: conftest.py  test_app.py
tests/pages/articles/: article1.html  article2.html  article3.html  article4.html
tests/pages/main/: page_1.html  page_2.html
